Tried to load a custom php page with nginx

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -3,6 +3,13 @@ services:
     image: mynginx
     build: requirements/nginx
     ports:
-      - "80:80"
+      - "8080:80"
+    volumes_from:
+      - wordpress
+  wordpress:
+    image: worpress
+    build: requirements/wordpress
+    expose:
+      - "9000"
     volumes:
-      - /home/rumachad/data:/var
+      - /home/rumachad/data:/var/www/html
