--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -4,9 +4,9 @@ COPY nginx.conf /etc/nginx/conf.d/nginx.conf
 
 RUN apt-get update \
    && apt-get -y install nginx \
-   && apt-get -y install procps \
+   && apt-get -y install openssl \
    && echo "daemon off;" >> /etc/nginx/nginx.conf
 
-EXPOSE 80
+EXPOSE 443
 
 CMD ["nginx"] 
