--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -1,5 +1,9 @@
 server {
-   location / {
-      root /home/rumachad/data;
-   }
+    listen 80;
+
+    location ~ \.php$ {
+         include fastcgi_params;
+         fastcgi_pass wordpress:9000;
+         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
 }
