--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -2,10 +2,15 @@ FROM debian:bullseye
 
 RUN apt-get update \
     && apt-get -y install curl \
-    && apt-get -y install php-fpm
-
-RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
+    && apt-get -y install php7.4-fpm \
+    && curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
     && chmod +x wp-cli.phar \
-    && mv wp-cli.phar /usr/local/bin/wp-cli
+    && mv wp-cli.phar /usr/local/bin/wp-cli \
+    && mkdir wordpress \
+    && wp-cli --allow-root --path=wordpress core download
 
-CMD ["wp-cli", "--allow-root", "--path=data", "core", "download"]
+RUN mkdir /run/php
+
+EXPOSE 9000
+
+CMD ["php-fpm7.4", "-F"]
