Finaly opened an index.php file with nginx and wordpress

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,11 +1,12 @@
 FROM debian:bullseye
 
-COPY nginx.conf /etc/nginx/conf.d
-
 RUN apt-get update \
    && apt-get -y install nginx \
    && apt-get -y install openssl \
-   && chmod -R 755 /var/www/html
+   && chmod -R 777 /var/www/html \
+   && rm /etc/nginx/sites-enabled/default
+
+COPY default.conf /etc/nginx/conf.d/ng.conf
 
 EXPOSE 80
 
