Added php-mysql to the wordpress container

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -3,7 +3,8 @@ FROM debian:bullseye
 RUN apt-get update \
     && apt-get -y install systemd \
     && apt-get -y install curl \
-    && apt-get -y install php7.4-fpm
+    && apt-get -y install php7.4-fpm \
+    && apt-get -y install php-mysql
 
 COPY ./www.conf /etc/php/7.4/fpm/pool.d/www.conf
 COPY ./script.sh /
