--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,9 +1,10 @@
 FROM debian:bullseye
 
 RUN apt-get update \
-    && apt-get -y install mariadb-server mariadb-client mariadb-backup
+    && apt-get -y install mariadb-server mariadb-client
 
 COPY ./script.sh /
+COPY 50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 RUN chmod +x script.sh
 
 EXPOSE 3306
