Implemented https server

--- a/srcs/requirements/nginx/default.conf
+++ b/srcs/requirements/nginx/default.conf
@@ -1,5 +1,16 @@
+#server {
+#    listen 80;
+#    return 301 htpps://$host$request_uri;
+#}
+
 server {
-    listen 80;
+    listen 443 ssl;
+
+    ssl_certificate     /etc/nginx/tls/localhost.crt;
+    ssl_certificate_key /etc/nginx/tls/localhost.key;
+    ssl_protocols       TLSv1.2 TLSv1.3;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
+
     root /var/www/html;
     index index.php index.html index.nginx-debian.html;
 
