--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -7,7 +7,8 @@ RUN apt-get update \
    && rm /etc/nginx/sites-enabled/default
 
 COPY default.conf /etc/nginx/conf.d/ng.conf
+COPY script.sh .
 
-EXPOSE 80
+RUN chmod +x script.sh
 
-CMD ["nginx", "-g", "daemon off;"] 
+CMD ["bash", "./script.sh"]
