Added env variables for wordpress site and some script tweaks

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,9 @@
 DB_USER=rumachad
 DB_PASSWORD=inception
-DB_NAME=test2
+DB_NAME=wp_db
 DB_HOST=mariadb
+WP_URL=localhost
+WP_TITLE="Finally This Works"
+WP_ADMIN_USER=rumachadwp
+WP_ADMIN_PASS=inception
+WP_ADMIN_EMAIL=rumachad@example.com
