Added docker secrets to hide private info

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,9 +1,9 @@
 DB_USER=rumachad
-DB_PASSWORD=inception
+DB_PASSWORD=/run/secrets/db_pass
 DB_NAME=wp_db
 DB_HOST=mariadb
-WP_URL=localhost
+WP_URL=rumachad.42.fr
 WP_TITLE="Finally This Works"
 WP_ADMIN_USER=rumachadwp
-WP_ADMIN_PASS=inception
+WP_ADMIN_PASS=/run/secrets/wp_pass
 WP_ADMIN_EMAIL=rumachad@example.com
