Added ssl keys as secrets, restart on-failure and a new user command in wordpress

--- a/srcs/.env
+++ b/srcs/.env
@@ -7,3 +7,5 @@ WP_TITLE="Finally This Works"
 WP_ADMIN_USER=rumachadwp
 WP_ADMIN_PASS=/run/secrets/wp_pass
 WP_ADMIN_EMAIL=rumachad@example.com
+SSL_CRT=/run/secrets/
+SSL_KEY=/run/secrets/
