--- a/srcs/requirements/nginx/default.conf
+++ b/srcs/requirements/nginx/default.conf
@@ -1,13 +1,13 @@
-#server {
-#    listen 80;
-#    return 301 htpps://$host$request_uri;
-#}
+server {
+    listen 80;
+    return 301 htpps://$host$request_uri;
+}
 
 server {
     listen 443 ssl;
 
-    ssl_certificate     /etc/nginx/tls/localhost.crt;
-    ssl_certificate_key /etc/nginx/tls/localhost.key;
+    ssl_certificate     /run/secrets/ssl_crt;
+    ssl_certificate_key /run/secrets/ssl_key;
     ssl_protocols       TLSv1.2 TLSv1.3;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
