--- a/srcs/requirements/nginx/default.conf
+++ b/srcs/requirements/nginx/default.conf
@@ -1,7 +1,7 @@
-server {
-    listen 80;
-    return 301 htpps://$host$request_uri;
-}
+#server {
+#    listen 80;
+#    return 301 htpps://$host$request_uri;
+#}
 
 server {
     listen 443 ssl;
