Added UserTest to .env file

--- a/srcs/.env
+++ b/srcs/.env
@@ -5,7 +5,11 @@ DB_HOST=mariadb
 WP_URL=rumachad.42.fr
 WP_TITLE="Finally This Works"
 WP_ADMIN_USER=rumachadwp
-WP_ADMIN_PASS=/run/secrets/wp_pass
+WP_ADMIN_PASS=/run/secrets/wp_admin_pass
 WP_ADMIN_EMAIL=rumachad@example.com
+WP_USER_USER=UserTest
+WP_USER_PASS=/run/secrets/wp_user_pass
+WP_USER_EMAIL=UserTest@example.com
+WP_USER_ROLE=contributor
 SSL_CRT=/run/secrets/
 SSL_KEY=/run/secrets/
