Adjusted the directory structure

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,10 +3,10 @@ FROM debian:bullseye
 RUN apt-get update \
     && apt-get -y install mariadb-server mariadb-client
 
-COPY ./script.sh /
-COPY 50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
+COPY ./tools/script.sh .
+COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 RUN chmod +x script.sh
 
 EXPOSE 3306
 
-ENTRYPOINT ["./script.sh"]
+CMD ["./script.sh"]
