--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -5,8 +5,8 @@ RUN apt-get update \
     && apt-get -y install php7.4-fpm \
     && apt-get -y install php-mysql
 
-COPY ./www.conf /etc/php/7.4/fpm/pool.d/www.conf
-COPY ./script.sh /
+COPY ./conf/www.conf /etc/php/7.4/fpm/pool.d/www.conf
+COPY ./tools/script.sh /
 
 RUN chmod +x script.sh
 RUN mkdir /run/php
